trees: make the treecol-image class wider - to stop the edge getting cropped
(integrated from komodo (trunk) change 65898 by toddw)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@8624 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/tree.css
+++ b/src/chrome/komodo/skin/tree.css
@@ -63,4 +63,5 @@ treechildren::-moz-tree-column(sort-column)
 .treecol-image {
     padding-left: 4px;
     padding-right: 4px;
+    min-width: 20px;
 }
